# wicher

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  buildconfig.h.in  config.h.in  configure  configure.ac  download_prebuilt.sh
gui/: create_item.ui  create_pz.ui  create_type.ui  create_wz.ui  gui.ui  info_item.ui  info_pz.ui  info_type.ui  info_window.ui  info_wz.ui  options_window.ui  splash.ui
include/: db.h  sha256.h  sw.h  toolkit.h  ui.h
include/server/: ConnectionManager.h
m4/: hpdf.m4
src/: Database.c  Database.cpp  DatabaseQuery.c  Dialogger.c  Makefile.am  Makefile.in  Toolkit.c  Toolkit.cpp  main.c  main.cpp
src/ListsManager/: Constructor.c  Refresh.c  StateManager.c  StateManager.cpp
src/Main/: Builder.cpp  Main.c  Main.cpp
src/PDF/: entry_gen.cpp  pz_gen.cpp  wz_gen.cpp
src/SignalWindows/: AddItemsWindow.c  CreateItemWindow.c  CreatePZWindow.c  CreateTypeWindow.c  CreateWZWindow.c  InfoItemWindow.c  InfoPZWindow.c  InfoTypeWindow.c  InfoWZWindow.c  SignalWindows.c
src/Splash/: RunServer.c  RunServer.cpp  Splash.c  Splash.cpp
src/Toolbar/: ToolbarInfo.c  ToolbarOptions.c
src/server/: Makefile.am  Makefile.in
