ACLOCAL_AMFLAGS = -I m4
SUBDIRS = src src/server
dist_doc_DATA = README README.md LICENSE
EXTRA_DIST = bootstrap gui icons tt include README.md
wicherdir = $(datadir)/@PACKAGE@
iconsdir = $(wicherdir)/icons
icons_DATA = icons/icon16.png \
	icons/icon32.png \
	icons/icon64.png \
	icons/icon128.png \
	icons/icon256.png
guidir = $(wicherdir)/gui
gui_DATA = gui/31kdh.png \
	gui/create_item.ui \
	gui/create_pz.ui \
	gui/create_type.ui \
	gui/create_wz.ui \
	gui/gui.ui \
	gui/info_item.ui \
	gui/info_pz.ui \
	gui/info_type.ui \
	gui/info_window.ui \
	gui/info_wz.ui \
	gui/options_window.ui \
	gui/splash.ui \
	gui/ZG.png
ttdir = $(wicherdir)/tt
tt_DATA = tt/arialbd.ttf \
	tt/arialbi.ttf \
	tt/ariali.ttf \
	tt/arial.ttf \
	tt/ariblk.ttf
